<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/groundListFragment"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_grounds" />
    <item
        android:id="@+id/teamFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_teams" />
    <item
        android:id="@+id/challengeBoardFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_challenges" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
